--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body,
 div,
@@ -85,6 +89,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: Noto Sans KR, sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article,
